started http service

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="node_modules/@angular/material/bundles/material.umd.js"></script>
 
     <!-- 2. Load our 'modules' -->
+    <script src='app/api.service.js'></script>
     <script src='app/app.component.js'></script>
     <script src='app/app.module.js'></script>
     <script src='main.js'></script>
