made data updatable

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src='app/DataModel.js'></script>
     <script src='app/api.service.js'></script>
     <script src='app/app.component.js'></script>
+    <script src='app/program.component.js'></script>
     <script src='app/app.module.js'></script>
     <script src='main.js'></script>
 
@@ -35,7 +36,7 @@
 
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    Loading...
   </body>
 
 </html>
