--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src='app/app.component.js'></script>
     <script src='app/programloader.component.js'></script>
     <script src='app/program.component.js'></script>
+    <script src='app/year.component.js'></script>
+    <script src='app/course.component.js'></script>
     <script src='app/app.module.js'></script>
     <script src='main.js'></script>
 
