--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style/material.css" rel="stylesheet">
     <!--<link rel="stylesheet" href="node_modules\normalize.css\normalize.css">-->
     <link rel="stylesheet" href="style/style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
