--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
     <script src='app/program.component.js'></script>
     <script src='app/year.component.js'></script>
     <script src='app/course.component.js'></script>
+    <script src='app/login.component.js'></script>
     <script src='app/app.module.js'></script>
     <script src='main.js'></script>
 
   </head>
-
-  <!-- 3. Display the application -->
   <body>
     Loading...
   </body>
