--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!--<link rel="stylesheet" href="node_modules\normalize.css\normalize.css">-->
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="icon"
+      type="image/png"
+      href="favicon.png" />
     <!-- 1. Load libraries -->
     <!-- IE required polyfill -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
