--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
     <script src="node_modules/@angular/forms/bundles/forms.umd.js"></script>
     <script src="node_modules/@angular/http/bundles/http.umd.js"></script>
     <script src="node_modules/@angular/material/bundles/material.umd.js"></script>
+    <script src="node_modules/clipboard/dist/clipboard.min.js"></script>
 
     <!-- 2. Load our 'modules' -->
     <script src='app/DataModel.js'></script>
     <script src='app/api.service.js'></script>
+    <script src='app/clipboard.service.js'></script>
     <script src='app/app.component.js'></script>
     <script src='app/programloader.component.js'></script>
     <script src='app/program.component.js'></script>
