made a propper periode controll

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src='app/DataModel.js'></script>
     <script src='app/api.service.js'></script>
     <script src='app/clipboard.service.js'></script>
+    <script src='app/periodecontrol.component.js'></script>
     <script src='app/app.component.js'></script>
     <script src='app/programloader.component.js'></script>
     <script src='app/program.component.js'></script>
